test/functions/vass/main-returns-param.good
main-returns-param.chpl:6: error: main function cannot return a type or a param
